--- a/Responsive Web Design/Tribute Page/style.css
+++ b/Responsive Web Design/Tribute Page/style.css
@@ -2,3 +2,73 @@
 8: img resize responsively in parent
 9: img centered in parent
 */
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    background: linear-gradient(rgb(182, 182, 241), rgb(245, 177, 177));
+}
+
+#main {
+    font-family: "Fira Code", monospace;
+
+    margin: 30px auto;
+    padding: 40px 80px;
+    background: rgb(233, 233, 233);
+    border-radius: 10px;
+    max-width: 700px;
+    
+    box-shadow: 5px 5px 0 3px rgb(250, 225, 114);
+}
+
+#title {
+    font-size: 65px;
+
+    text-align: center;
+}
+
+#oneliner {
+    font-size: 20px;
+    text-align: center;
+}
+#img-div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#image {
+    width: 650px;
+    height: auto;
+    margin: 40px 0 25px 0;
+
+    border-radius: 10px;
+}
+
+#img-div {
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+#tribute-info {}
+
+#tribute-title {
+    text-align: center;
+    font-size: 20px;
+    margin-bottom: 30px;
+}
+
+#tribute-body {margin-bottom: 50px;}
+#poem {text-align: center;}
+#poem-title {font-size: 30px;}
+#read-more{text-align: center;}
+#tribute-link{text-align: center;}
+
+hr {
+    border: 2.8px solid rgb(255, 218, 9);
+    margin: 0 auto 50px auto;
+    border-radius: 30px;
+    width: 80%;
+}
