--- a/Responsive Web Design/Survey Form/style.css
+++ b/Responsive Web Design/Survey Form/style.css
@@ -5,11 +5,9 @@
 
 body {
     padding-top: 85px;
-
     display: flex;
     flex-direction: column;
     align-items: center;
-
     color: black;
     font-family: "Quicksand";
     background-image: url("https://i.pinimg.com/736x/f3/ed/ee/f3edeef287ab6c4ea59b9c971a410f47.jpg");
@@ -33,12 +31,9 @@ body {
     width: 650px;
     display: flex;
     flex-direction: column;
-
     padding: 50px 50px 0px 50px;
     background-image: linear-gradient(45deg, rgb(168, 139, 235), rgba(248, 206, 236, 0.85));
-    /* background-color: rgba(216, 247, 255, 0.8); */
     border-radius: 5px;
-
     color: white;
     font-size: 20px;
     font-weight: bold;
@@ -61,7 +56,6 @@ select {
     height: 40px;
     padding: 0 10px;
     border-radius: 5px;
-
     font-size: 18px;
 }
 
@@ -70,17 +64,41 @@ fieldset {
     flex-direction: column;
     justify-content: center;
     padding: 30px;
-    
+    border: 1px solid white;
 }
 
 fieldset label {
     display: flex;
     align-items: center;
     padding: 10px 0;
-
     font-weight: 500;
 }
 
 fieldset input {
     margin-right: 5px;
+}
+
+#submit {
+    margin-top: -15px;
+    color: white;
+    width: 20%;
+    height: 40px;
+    align-self: center;
+    background-image: linear-gradient(45deg, rgb(168, 139, 235, 0.5), rgba(248, 206, 236, 0.5));
+    border: 1px solid white;
+    border-radius: 5px;
+    background-color: transparent;
+}
+
+#submit:hover {
+    animation-name: spread;
+    animation-duration: 0.8s;
+    animation-fill-mode: forwards;
+    animation-timing-function: cubic-bezier(0, 0, 0.1, 1);
+}
+
+@keyframes spread {
+    100% {
+        width: 100%;
+    }
 }
