--- a/Responsive Web Design/Survey Form/style.css
+++ b/Responsive Web Design/Survey Form/style.css
@@ -39,6 +39,10 @@ body {
     font-weight: bold;
 }
 
+#dropdown {
+    background-color: white;
+}
+
 fieldset,
 #name, 
 #email,
@@ -65,6 +69,7 @@ fieldset {
     justify-content: center;
     padding: 30px;
     border: 1px solid white;
+    border-radius: 5px;
 }
 
 fieldset label {
@@ -94,9 +99,12 @@ fieldset input {
     padding: 10px;
     font-family: "Quicksand", monospace;
     font-size: 15px;
+    font-weight: 700;
+    color: white;
     height: 150px;
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0);
     border: 1px solid white;
+    border-radius: 5px;
 }
 
 #submit:hover {
