--- a/Responsive Web Design/Product Landing Page/style.css
+++ b/Responsive Web Design/Product Landing Page/style.css
@@ -4,3 +4,78 @@ TODO
 (14) media query
 (15) flexbox
 */
+
+/* @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); */
+
+* {
+    padding: 0;
+    margin: 0;
+    font-family: 'Nunito', sans-serif;
+}
+
+body,
+#content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#content {
+    gap: 3vw;
+    max-width: 800px;
+    padding: 0 18px;
+}
+
+video {
+    width: 50vw;
+    height: auto;
+}
+
+#header {
+    padding-top: 15px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    width: 100%;
+    height: 100px;
+    background-color: rgba(232, 236, 246, 1);
+}
+
+#header-img {
+    aspect-ratio: 1/1;
+    height: 100%;
+}
+
+#nav-bar {
+    background-color: inherit;
+    padding-right: 2vw;
+    display: flex;
+    gap: 4vw;
+    font-size: inherit;
+}
+
+.nav-link {
+    text-decoration: none;
+}
+
+#video {
+    margin-top: 150px;
+    border-radius: 5px;
+    width: 70%;
+}
+
+#pricing {
+    display: flex;
+    gap: 18px;
+}
+
+.plan {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 13px;
+    border: 2px solid rgba(232, 236, 246, 1);
+}
