--- a/Responsive Web Design/Product Landing Page/style.css
+++ b/Responsive Web Design/Product Landing Page/style.css
@@ -1,11 +1,7 @@
 /*
-TODO
-(13) navbar
+TODO:
 (14) media query
-(15) flexbox
 */
-
-/* @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap'); */
 
 * {
     padding: 0;
@@ -41,6 +37,7 @@ video {
     width: 100%;
     height: 100px;
     background-color: rgba(232, 236, 246, 1);
+    border-bottom: 2px solid rgb(8, 101, 129);
 }
 
 #header-img {
@@ -57,18 +54,38 @@ video {
 }
 
 .nav-link {
+    color: rgb(8, 101, 129);
     text-decoration: none;
 }
 
 #video {
     margin-top: 150px;
+    border: 3px solid rgb(8, 101, 129);
     border-radius: 5px;
     width: 70%;
 }
 
+#email {
+    border: 2px solid rgb(8, 101, 129);
+    border-radius: 5px;
+    height: 30px;
+    width: 300px;
+    text-align: center;
+}
+
+#submit,
+button {
+    border: 2px solid rgb(8, 101, 129);
+    border-radius: 5px;
+    height: 33px;
+    width: 33px;
+    background-color: white;
+}
+
 #pricing {
     display: flex;
-    gap: 18px;
+    gap: 30px;
+    margin: 50px 0;
 }
 
 .plan {
@@ -76,6 +93,59 @@ video {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 13px;
-    border: 2px solid rgba(232, 236, 246, 1);
+    padding: 13px 30px;
+    border: 2px solid rgb(8, 101, 129);
+    border-radius: 5px;
+    width: 150px;
+}
+
+.label,
+.keyword {
+    color: rgb(8, 101, 129);
+    font-size: 40px;
+    margin-bottom: 10px;
+}
+
+button {
+    margin-top: 20px;
+    width: 50%;
+    font-family: "Fira Code";
+}
+
+footer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+    background-color: rgba(232, 236, 246, 1);
+    width: 100%;
+    height: 110px;
+    color: rgb(8, 101, 129);
+    border-top: 2px solid rgb(8, 101, 129);
+}
+
+#links {
+    display: flex;
+    gap: 10px;
+    font-size: large;
+}
+
+#submit:hover,
+button:hover {
+    animation-name: darken;
+    animation-duration: 0.5s;
+    animation-fill-mode: forwards;
+}
+
+@keyframes darken {
+    100% {
+        background-color: rgb(8, 101, 129);
+    }
+}
+
+@media (max-width: 700px) {
+    #pricing {
+        flex-direction: column;
+    }
 }
